<resources>
    <string name="app_name">ChatOI</string>
    <string name="chats">Conversations</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="new_chat">New chat</string>
    <string name="search_conversations">Search or create a new chat</string>
    <string name="no_conversations">Belum ada yang nyapa kamu... kasian\n</string>
    <string name="start_new_conversation">Awokaowkoa buatmi \n</string>
    <string name="send_message">Send message</string>
    <string name="attach_file">Seed file</string>
    <string name="type_message">Send message..</string>
    <string name="search">Search</string>
    <string name="filter">Filter\n</string>
    <string name="pin_chat">Pin chat</string>
    <string name="mute_chat">Mute chat</string>
    <string name="chat_settings">Chat settings</string>
    <string name="delete_chat">Delete chat</string>
    <string name="choose_attachment">Choose attachment</string>
    <string name="image">Image</string>
    <string name="camera">Camera\n</string>
    <string name="file">File</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="contact_avatar">Username</string>
    <string name="view_profile">View profile</string>
    <string name="app_settings">Settings\n</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_detail">Chat details</string>
    <string name="new_chat_title">New chat title</string>
    <string name="chat_details">Detail</string>
    <string name="members">Members\n</string>
    <string name="profil_saya">Profil Saya</string>
    <string name="foto_profil">Foto profil</string>
    <string name="ubah_foto">Ubah foto</string>
    <string name="john_doe">John Doe</string>
    <string name="pangeranjuhrifar_gmail_com">pangeranjuhrifar@gmail.com</string>
    <string name="id_uuid_1234">ID : uuid-1234</string>
    <string name="copy_id">Copy ID</string>
    <string name="status">Status</string>
    <string name="status_text">Online</string>
    <string name="edit_profil">Edit</string>
    <string name="ubah">Ubah</string>
    <string name="tentang_aplikasi">"Aplikasi ini adalah aplikasi chat yang memungkinkan pengguna untuk berkomunikasi secara real-time dengan teman dan keluarga.API yang digunakan adalah REST API yang dibuat sendiri menggunakan python FastAPI untuk resource code REST API ada pada link berikut : "</string>
    <string name="support">Jika Anda membutuhkan bantuan, silakan hubungi tim dukungan kami melalui menu ini.</string>
    <string name="data">Kelola data anda tersimpan secara local di database aku yang mana aplikasi inikan akan jalan untuk sementara di server local aku jadi data akan aman karena aku developer baik.</string>
    <string name="new_chats">Buat sekarang</string>
    <string name="buat_percakapan">"Buat "</string>
    <string name="message_status">Message status</string>

</resources>