<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <!-- Theme Settings -->
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Mode Gelap"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"
            android:padding="16dp"
            android:textColor="@color/primary_text" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/surface_color">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="Ubah thema aplikasi jadi light dan dark semau anda"
                android:textSize="14sp"
                android:textColor="@color/secondary_text" />
        </androidx.cardview.widget.CardView>

        <!-- Tentang Aplikasi -->
        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tentang Aplikasi"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/primary_text"
            android:padding="16dp"
            android:background="?attr/selectableItemBackground" />

        <!-- Card tentang Aplikasi -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_app_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/surface_color">

            <TextView
                android:id="@+id/tv_app_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:justificationMode="inter_word"
                android:text="@string/tentang_aplikasi"
                android:textSize="14sp"
                android:textColor="@color/secondary_text" />
        </androidx.cardview.widget.CardView>

        <!-- Bantuan dan Dukungan -->
        <TextView
            android:id="@+id/tv_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bantuan dan Dukungan"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"
            android:textColor="@color/primary_text"
            android:padding="16dp" />

        <!-- Card Bantuan dan Dukungan -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_support_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/surface_color">

            <TextView
                android:id="@+id/tv_support_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/support"
                android:textSize="14sp"
                android:textColor="@color/secondary_text" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Penyimpanan dan Data"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"
            android:textColor="@color/primary_text"
            android:padding="16dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/surface_color">

            <TextView
                android:id="@+id/tv_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/data"
                android:textSize="14sp"
                android:textColor="@color/secondary_text" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
